[metadata]
name = mlfinlab
version = 0.0.1
author = Hudson and Thames Quantitative Research
author_email = research@hudsonthames.org
licence = All Rights Reserved
licence-file = LICENSE.txt
description = This is a PyPI placeholder for the MlFinLab package.
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
url = https://www.hudsonthames.org/
project_urls =
    Documentation = https://mlfinlab.readthedocs.io/en/latest/
    Bug Reports = https://github.com/hudson-and-thames/mlfinlab/issues
    Project Boards = https://github.com/orgs/hudson-and-thames/projects
    Source = https://github.com/hudson-and-thames/mlfinlab
    Blog = https://hudsonthames.org/blog/
    Apprenticeship Program = https://hudsonthames.org/apprenticeship-program/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business :: Financial :: Investment
keywords =
    machinelearning
    finance
    investment
    education

[options]
include_package_data = True
packages = find:
python_requires =
    >=3.6, <3.9

[options.packages.find]
package_dir =
    mlfinlab
